k8s/03-apps.yaml
# ---------------- BASE/REDIS (Database) ----------------
apiVersion: apps/v1
kind: Deployment
metadata:
  name: database
  namespace: zta-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: database
  template:
    metadata:
      labels:
        app: database
    spec:
      serviceAccountName: database-sa
      nodeSelector:
        kubernetes.io/hostname: minikube-m02
      securityContext:
        runAsNonRoot: true
        runAsUser: 999 
      containers:
      - name: redis
        image: redis:7-alpine
        ports:
        - containerPort: 6379
        securityContext:
          allowPrivilegeEscalation: false
---
apiVersion: v1
kind: Service
metadata:
  name: database
  namespace: zta-demo
spec:
  selector:
    app: database
  ports:
  - port: 6379
    targetPort: 6379

# ---------------- BACKEND ----------------
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: zta-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      serviceAccountName: backend-sa
      nodeSelector:
        kubernetes.io/hostname: minikube-m02
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
      containers:
      - name: backend
        image: zta-backend:local
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3000
        securityContext:
          allowPrivilegeEscalation: false
          runAsNonRoot: true
          runAsUser: 1000
---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: zta-demo
spec:
  selector:
    app: backend
  ports:
  - port: 3000
    targetPort: 3000

# ---------------- FRONTEND ----------------
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: zta-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      serviceAccountName: frontend-sa
      nodeSelector:
        kubernetes.io/hostname: minikube-m02
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
      containers: 
      - name: frontend
        image: zta-frontend:local
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
        securityContext:
          allowPrivilegeEscalation: false
          runAsNonRoot: true
          runAsUser: 1000
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: zta-demo
spec:
  type: NodePort
  selector:
    app: frontend
  ports:
  - port: 80
    targetPort: 8080
    nodePort: 30080
