k8s/07-auth-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service
  namespace: zta-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-service
  template:
    metadata:
      labels:
        app: auth-service
    spec:
      serviceAccountName: auth-service-sa
      nodeSelector:
        kubernetes.io/hostname: minikube-m02
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
      containers:
      - name: auth-service
        image: zta-auth-service:local
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 4000
        securityContext:
          allowPrivilegeEscalation: false
          runAsNonRoot: true
          runAsUser: 1000
---
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  namespace: zta-demo
spec:
  selector:
    app: auth-service
  ports:
  - port: 4000
    targetPort: 4000
